deploy/kubernetes/carina-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carina-scheduler
  namespace: kube-system
  labels:
    component: carina-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      component: carina-scheduler
  template:
    metadata:
      labels:
        component: carina-scheduler
    spec:
      serviceAccount: carina-scheduler-sa
      priorityClassName: system-cluster-critical
      containers:
        - name: carina-scheduler
          image: registry.cn-hangzhou.aliyuncs.com/antmoveh/carina-scheduler:latest
          imagePullPolicy: "Always"
          command: ["carina-scheduler"]
          args:
            - --config=/etc/kube/scheduler-config.yaml
            - --v=3
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          volumeMounts:
            - name: scheduler-config
              mountPath: /etc/kube/
            - name: config
              mountPath: /etc/carina/
      volumes:
        - name: scheduler-config
          configMap:
            name: carina-scheduler-config
        - name: config
          configMap:
            name: carina-csi-config
