deploy/kubernetes/csi-carina-controller.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: csi-carina-provisioner
  namespace: kube-system
  labels:
    app: csi-carina-provisioner
spec:
  selector:
    matchLabels:
      app: csi-carina-provisioner
  replicas: 1
  template:
    metadata:
      labels:
        app: csi-carina-provisioner
    spec:
      serviceAccount: carina-csi-controller
      containers:
        - name: csi-provisioner
          image: registry.cn-hangzhou.aliyuncs.com/carina/csi-provisioner:v2.2.2
          args:
            - "--csi-address=/csi/csi-carina.sock"
            - "--v=5"
            - "--timeout=150s"
            - "--leader-election=true"
            - "--retry-interval-start=500ms"
            - "--feature-gates=Topology=true"
            - "--extra-create-metadata=true"
            -  "--strict-topology=true"
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: csi-resizer
          image: registry.cn-hangzhou.aliyuncs.com/carina/csi-resizer:v1.5.0
          args:
            - "--csi-address=/csi/csi-carina.sock"
            - "--v=5"
            - "--timeout=150s"
            - "--leader-election"
            - "--retry-interval-start=500ms"
            - "--handle-volume-inuse-error=false"
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: csi-carina-controller
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
          # for stable functionality replace canary with latest release version
          image: registry.cn-hangzhou.aliyuncs.com/carina/carina:latest
          command: ["carina-controller"]
          args:
            - "--csi-address=/csi/csi-carina.sock"
            - "--cert-dir=/certs"
            - "--metrics-addr=:8080"
            - "--webhook-addr=:8443"
          ports:
            - containerPort: 9808
              name: healthz
            - containerPort: 8080
              name: metrics
            - containerPort: 8443
              name: webhook
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            failureThreshold: 3
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 65
          resources:
            requests:
              memory: "64Mi"
              cpu: "300m"
            limits:
              memory: "128Mi"
              cpu: "750m"
          imagePullPolicy: "Always"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
              mountPropagation: Bidirectional
            - name: config
              mountPath: /etc/carina/
            - name: certs
              mountPath: /certs
        - name: liveness-probe
          image: registry.cn-hangzhou.aliyuncs.com/carina/livenessprobe:v2.7.0
          imagePullPolicy: "IfNotPresent"
          args:
            - --csi-address=/csi/csi-carina.sock
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
      volumes:
        - name: socket-dir
          emptyDir: {
            medium: "Memory"
          }
        - name: config
          configMap:
            name: carina-csi-config
        - name: certs
          secret:
            secretName: mutatingwebhook

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csi-carina-provisioner
  name: carina-controller
  namespace: kube-system
spec:
  selector:
    app: csi-carina-provisioner
  ports:
    - name: webhook
      protocol: TCP
      port: 443
      targetPort: 8443
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: carina-hook
webhooks:
  - name: pod-hook.carina.storage.io
    namespaceSelector:
      matchExpressions:
        - key: carina.storage.io/webhook
          operator: NotIn
          values: ["ignore"]
    clientConfig:
      service:
        name: carina-controller
        namespace: kube-system
        path: /pod/mutate
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: NoneOnDryRun
    timeoutSeconds: 30
