deploy/kubernetes/mutatingwebhooks.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: carina-hook
webhooks:
  - name: pod-hook.carina.storage.io
    namespaceSelector:
      matchExpressions:
      - key: carina.storage.io/webhook
        operator: NotIn
        values: ["ignore"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1EUXhOVEF5TlRjeU9Wb1hEVE14TURReE16QXlOVGN5T1Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS2F2CjVDWE4xVkVhM0JIdVY5T05kR0ZhMDAwQmRzZnd5L24ydkdQNkUyM1JzelFqdVdIbTBBTGRmU0NsRlh5QWlJVDMKYjEvNzFCRjRBRitIZDEzam9rUmpVa0NQQStNUDRvR2h2b2VIQkdFSFJHL0JoZ2t2VGMzN3FQbDhXczVGaUJGeApwRlRYNURmaGsy [...]
      service:
        name: carina-controller
        namespace: kube-system
        path: /pod/mutate
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1beta1"]
    sideEffects: NoneOnDryRun
    timeoutSeconds: 30
